--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@firebase/database": "^1.0.4",
+    "firebase": "^10.11.1",
     "highcharts": "^11.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
